# portfolio-etl-pipeline

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/curated/: pipeline_run_metadata.json  sales_curated.csv
data/raw/: sales_raw.csv
src/etl_pipeline/: __init__.py  config.py  extract.py  load.py  logging_config.py  models.py  pipeline.py  transform.py
src/portfolio_etl_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_transform.py
