[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-etl-pipeline"
version = "0.1.0"
description = "A simple, portfolio-ready ETL pipeline with industry-standard structure."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
